--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   </head>
   <body>
      <!-- Write your markup here  -->
-
+<h1>Astro Calculator</h1>
     <script src="main.js" charset="utf-8"></script>
   </body>
 </html>
