--- a/index.html
+++ b/index.html
@@ -1,12 +1,53 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8">
-    <title>Astro Weight Calculator</title>
-  </head>
-  <body>
-     <!-- Write your markup here  -->
-<h1>Astro Calculator</h1>
-    <script src="main.js" charset="utf-8"></script>
-  </body>
+
+<head>
+  <meta charset="utf-8">
+  <title>ASTRO|HR</title>
+  <link rel="stylesheet" href="weight.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link
+    href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
+    rel="stylesheet">
+
+
+</head>
+
+<body>
+
+  <h1 class="bounce">Astro Calculator</h1>
+  <div class="myVideo">
+  <video autoplay muted loop id="background-video" src="Assets/Videos/1118701_4k_Astronomy_Stars_1920x1080.mp4"></video>
+  </div>
+    
+  
+
+  <div class="container">
+    <div class="formchoice">
+      <div>
+        <label for="user-weight">Enter your weight</label>
+        <input id="user-weight" type="number" placeholder="Weight (lbs)" name="user-weight" />
+      </div>
+      <div>
+        <label for="planets">Choose a planet</label>
+        <select id="planets" type="text" required>
+          <option value="">Pick a planet!</option>
+
+        </select>
+        <div class="star-wars">
+          <p class="crawl" id="output"></p>
+        </div>
+      </div>
+    </div>
+
+
+
+    <button onClick="handleClickEvent()" id="calculate-button">Calculate</button>
+  </div>
+
+  <script src="main.js" charset="utf-8"> </script>
+
+</body>
+
 </html>
